- 
    Bug 
- 
    Resolution: Done
- 
    P3: Somewhat important 
- 
    5.12
- 
    None
- 
    android-clang in NDK r16b on a macOS
- 
        e1b40675ba4adca014c45926ef29b78d22fe4833
That's a manual build qtbase dev branch with android-clang in NDK r16b on a macOS.
/opt/android/android-ndk-r16b/toolchains/llvm/prebuilt/darwin-x86_64/bin/clang++ -c -D__ANDROID_API__=21 -target armv7-none-linux-androideabi -gcc-toolchain /opt/android/android-ndk-r16b/toolchains/arm-linux-androideabi-4.9/prebuilt/darwin-x86_64 -DANDROID_HAS_WSTRING --sysroot=/opt/android/android-ndk-r16b/sysroot -isystem /opt/android/android-ndk-r16b/sysroot/usr/include/arm-linux-androideabi -isystem /opt/android/android-ndk-r16b/sources/cxx-stl/llvm-libc++/include -isystem /opt/android/android-ndk-r16b/sources/android/support/include -isystem /opt/android/android-ndk-r16b/sources/cxx-stl/llvm-libc++abi/include -fstack-protector-strong -DANDROID -march=armv7-a -mfloat-abi=softfp -mfpu=vfp -fno-builtin-memmove -mthumb -Oz -std=c++1z -fvisibility=hidden -fvisibility-inlines-hidden -Wall -W -Werror -Wno-error=#warnings -Wno-error=deprecated-declarations -D_REENTRANT -fPIC -DQT_NO_USING_NAMESPACE -DQT_NO_FOREACH -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_BUILD_CORE_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_NO_DEBUG -DPCRE2_CODE_UNIT_WIDTH=16 -I. -Iglobal -I../3rdparty/harfbuzz/src -I../3rdparty/md5 -I../3rdparty/md4 -I../3rdparty/sha3 -I../3rdparty/double-conversion/include -I../3rdparty/double-conversion/include/double-conversion -I../3rdparty/forkfd -I../3rdparty/tinycbor/src -I../../include -I../../include/QtCore -I../../include/QtCore/5.12.0 -I../../include/QtCore/5.12.0/QtCore -I.moc -I.tracegen -I../3rdparty/pcre2/src -I../../mkspecs/android-clang -o .obj/qwaitcondition_unix.o thread/qwaitcondition_unix.cpp thread/qwaitcondition_unix.cpp:209:14: error: comparison of constant 9223372036854775807 with expression of type 'unsigned long' is always false [-Werror,-Wtautological-constant-out-of-range-compare] if (time > std::numeric_limits<qint64>::max()) ~~~~ ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 1 error generated. make: *** [.obj/qwaitcondition_unix.o] Error 1
- is required for
- 
                     QTBUG-67464
        Build Android packages with clang QTBUG-67464
        Build Android packages with clang-         
- Closed
 
-